--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ axum = "0.6.20"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.105"
 tokio = { version = "1.32.0", features = ["full"] }
+tower-cookies = "0.9.0"
 tower-http = { version = "0.4.3", features = ["fs"] }
 
 [dev-dependencies]
